# alibaba-inquiry-skill

./: .githubignore  .gitignore  AGENTS.md  GITHUB_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  build.sh  ecosystem.config.js  package-lock.json  package.json  run.js  start-chrome.sh  start.bat  start.sh
agents/: index.js
agents/design/: image-generator.js  index.js  template-engine.js
agents/inventory/: index.js  shipment-tracker.js  stock-monitor.js
agents/logistics/: freight-comparer.js  index.js  logistics-tracker.js
agents/operation/: ad-optimizer.js  analytics.js  index.js
chrome-extension/: README.md  manifest.json
config/: settings.json  shop-type.js
cookies/: alibaba.json  last_session.json  operation_default.json  sales_default.json
core/: browser-manager.js  cookie-store.js  data-store.js  index.js  memory-system.js  task-executor.js  task-queue.js
docs/: 7-ROLES-IMPLEMENTATION.md  CHANGELOG.md  USER_GUIDE.md  avoid-sms-verification.md
skills/: README.md
src/: ai-replier.js  browser.js
web/: README.md  index.html  package.json  server.js
web-app/: .gitignore  BUILD.md  BUILD_GUIDE.md  README.md  build.bat  build.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web-app/src-tauri/: Cargo.toml  tauri.conf.json
web-app/src-tauri/capabilities/: default.json
web-app/src-tauri/icons/: icon.icns
web-app/src-tauri/src/: lib.rs  main.rs
wx/: 协作流程图.txt  阿里国际站7岗位双渠道版.docx  阿里国际站7岗位双渠道版.txt  阿里国际站AI智能体团队协同流程图.docx  阿里巴巴国际站运营Agent顶级优化指令 (1)-1.docx
(+102 files in other folders)
