[package]
name = "ali-ai-agent-system"
version = "2.0.0"
description = "阿里国际站 AI 智能体协同系统"
authors = ["OPC"]
edition = "2021"

[lib]
name = "ali_intelligent_salesman_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
